# DungeonJournal

./: .gitignore  .gitmodules  DragonJournal.drawio  README.md  build_test.sh  io.github.daved3464.DungeonJournal.json  io.github.daved3464.DungeonJournal.json~  meson.build  uncrustify.vala.cfg
data/: dungeonjournal-icons.gresources.xml  io.github.daved3464.DungeonJournal.appdata.xml.in  io.github.daved3464.DungeonJournal.desktop.in  io.github.daved3464.DungeonJournal.gschema.xml  meson.build
data/ui/: ApplicationWindow.ui
po/: LINGUAS  POTFILES.in  es_CO.mo  es_CO.po  index.lokalize  messages.pot  terms.tbx
src/: Application.vala  CharacterSheet.vala  Settings.vala  Util.vala  dungeonjournal.gresource.xml  meson.build
src/models/: CharacterSheet.vala
src/ui/: ApplicationWindow.ui  ApplicationWindow.vala  CharacterAttackRow.ui  CharacterAttackRow.vala  CharacterFeatRow.ui  CharacterFeatRow.vala  CharacterInfoPage.ui  CharacterInfoPage.vala  CharacterInventoryPage.ui  CharacterInventoryPage.vala  CharacterItemRow.ui  CharacterItemRow.vala  CharacterSkillsPage.ui  CharacterSkillsPage.vala  ComboBoxRow.ui  ComboBoxRow.vala  EntryRow.ui  EntryRow.vala  RecentsCharacterRow.ui  RecentsCharacterRow.vala  ShortcutsWindow.ui  ShortcutsWindow.vala  SpinButtonCheckboxRow.ui  SpinButtonCheckboxRow.vala  SpinButtonRow.ui  SpinButtonRow.vala  StartupWindow.ui  StartupWindow.vala  TODO.md
src/ui/components/: RecentsCharacterRow.ui  RecentsCharacterRow.vala  SeparatorRow.vala  SpinButtonCheckboxRow.ui  SpinButtonCheckboxRow.vala  SpinButtonRow.ui  SpinButtonRow.vala
src/ui/pages/character-info/: CharacterInfoPage.ui  CharacterInfoPage.vala
src/ui/pages/character-info/components/: CharacterAttackRow.ui  CharacterAttackRow.vala  CharacterFeatRow.ui  CharacterFeatRow.vala  ComboBoxRow.ui  ComboBoxRow.vala  EntryRow.ui  EntryRow.vala
src/ui/pages/character-info/widgets/: CharacterAttackRow.ui  CharacterAttackRow.vala  CharacterFeatRow.ui  CharacterFeatRow.vala
src/ui/pages/character-inventory/: CharacterInventoryPage.ui  CharacterInventoryPage.vala
src/ui/pages/character-inventory/components/: CharacterItemRow.ui  CharacterItemRow.vala
src/ui/pages/character-inventory/widgets/: CharacterItemRow.ui  CharacterItemRow.vala
src/ui/pages/character-select/: CharacterSelectPage.ui  CharacterSelectPage.vala
src/ui/pages/character-skills/: CharacterSkillsPage.ui  CharacterSkillsPage.vala
src/ui/styles/: dungeonjournal.css
src/ui/widgets/: CharacterRowInterface.vala  EntryRow.ui  EntryRow.vala  RecentsCharacterRow.ui  RecentsCharacterRow.vala  SpinButtonCheckboxRow.ui  SpinButtonCheckboxRow.vala  SpinButtonRow.ui  SpinButtonRow.vala
